--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_slidable: ^2.0.0
   timeline_tile: ^2.0.0
   pin_code_fields: ^7.4.0
+  dots_indicator: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +73,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
+    - assets/
+    - assets/products/
+    - assets/walk_through/
     - images/
     - images/app/
     - images/app/abstract_icons/
