--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   pin_code_fields: ^7.4.0
   dots_indicator: ^2.1.0
   font_awesome_flutter: ^10.2.1
+  flutter_format_money_vietnam: ^0.0.2
 
 dev_dependencies:
   flutter_test:
