--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   dots_indicator: ^2.1.0
   font_awesome_flutter: ^10.2.1
   flutter_format_money_vietnam: ^0.0.2
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
