--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,8 @@ dependencies:
   font_awesome_flutter: ^10.2.1
   flutter_format_money_vietnam: ^0.0.2
   shared_preferences: ^2.0.15
-
+  fluttertoast: ^8.1.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
